<resources>
    <string name="app_name">CSDEindopdracht</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_container" translatable="false">Fragment container</string>
    <string name="character_button">Go to character</string>
    <string name="training_button">Train yourself</string>
    <string name="race_button">Race a bot</string>

    <!-- Character fragment -->
    <string name="character_title">Character</string>
    <string name="stamina">Stamina</string>
    <string name="speed">Speed</string>
    <string name="top_speed">Top speed</string>
    <string name="avatar">Avatar</string>
    <string name="dutch_flag">Nederlands</string>
    <string name="british_flag">English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sprint_button">Sprint button</string>

    <!-- Services -->
    <string name="channel_name">Training</string>

    <!-- Open route service -->
    <string name="DepletedStamina">Your stamina is depleted</string>
    <string name="LoseRaceMessage">You lost! Try again!</string>
    <string name="WinRaceMessage">You Win! Well done!</string>
    <string name="Readysetgo">Ready! Set! Go!</string>
    <string name="api_response_fail">Failed to receive a response.</string>
    <string name="ForfeitRace">Too bad! Try again later!</string>
</resources>